--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -31,6 +31,9 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Shanghai
+          plugin_achievements: yes
+          plugin_achievements_display: detailed
+          
           plugin_habits: yes
           plugin_habits_charts_type: classic
           plugin_habits_days: 14
